Added more helper for user
