# webserver/src/http/handler_frontend/oidc/handler.rs
@@ -16,11 +16,14 @@ use openidconnect::TokenResponse;
 use rorm::insert;
 use rorm::prelude::ForeignModelByField;
 use rorm::query;
+use rorm::update;
 use rorm::FieldAccess;
 use rorm::Model;
 use swaggapi::get;
+use time::OffsetDateTime;
 use tower_sessions::Session;
 use tracing::debug;
+use tracing::error;
 use tracing::instrument;
 use tracing::trace;
 use uuid::Uuid;
@@ -32,8 +35,10 @@ use crate::http::handler_frontend::oidc::schema::AuthRequest;
 use crate::http::handler_frontend::oidc::schema::AuthState;
 use crate::http::SESSION_OIDC_REQUEST;
 use crate::http::SESSION_USER;
+use crate::models;
 use crate::models::OidcUser;
 use crate::models::User;
+use crate::models::UserInsert;
 
 /// Handler for OIDC's login endpoint
 #[get("/start-auth")]
@@ -157,7 +162,7 @@ pub async fn finish_auth(
     } else {
         let prim = insert!(&mut tx, User)
             .return_primary_key()
-            .single(&User {
+            .single(&UserInsert {
                 uuid: Uuid::new_v4(),
                 display_name,
             })
@@ -173,6 +178,28 @@ pub async fn finish_auth(
     };
 
     session.insert(SESSION_USER, *oidc_user.user.key()).await?;
+
+    session.insert("user", *oidc_user.user.key()).await?;
+    // We have to call save manually as the id is only populated after creating the session
+    session.save().await?;
+
+    let Some(id) = session.id() else {
+        error!("No ID in session");
+        return Err(ApiError::SessionCorrupt);
+    };
+    update!(&mut tx, models::Session)
+        .condition(models::Session::F.id.equals(id.to_string()))
+        .set(
+            models::Session::F.user,
+            Some(ForeignModelByField::Key(*oidc_user.user.key())),
+        )
+        .exec()
+        .await?;
+
+    update!(&mut tx, User)
+        .condition(User::F.uuid.equals(*oidc_user.user.key()))
+        .set(User::F.last_login, Some(OffsetDateTime::now_utc()))
+        .await?;
 
     tx.commit().await?;
 
